--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -6,19 +6,31 @@
 name: hexlet-check
 
 on:
-  push:
-    branches:
-      - '**'
-    tags:
-      - '**'
+  - push
+  - pull_request
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Hexlet project check
-        uses: hexlet/project-action@release
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          hexlet-id: ${{ secrets.HEXLET_ID }}
+          python-version: '3.12'
+      - name: Install dependencies
+        run: |
+          pip install uv
+          make install
+      - name: Run linter and pytest
+        run: |
+          make test
+      - name: SonarQubeScan
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=hexlet-boilerplates_python-package
+            -Dsonar.organization=hexlet-boilerplates
+            -Dsonar.python.coverage.reportPaths=coverage.xml
