--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,10 @@ build-backend = 'hatchling.build'
 [tool.hatch.build.targets.wheel]
 packages = ['python_project_scripts']
 
+[dependency-groups]
+dev = [
+    "ruff>=0.14.5",
+]
+
 [project.scripts]
 gendiff = 'python_project_scripts.scripts.gendiff:main'
