--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           pip install uv
           make install
-      - name: Run linter and pytest
+      - name: Run linter
         run: |
           make test
       - name: SonarQubeScan
