--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -24,7 +24,7 @@ jobs:
           make install
       - name: Run linter
         run: |
-          make test
+          make lint
       - name: SonarQubeScan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
