--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -34,3 +34,4 @@ jobs:
           args: >
             -Dsonar.projectKey=cruelwxrld_python-project-50
             -Dsonar.organization=cruelwxrld
+            -Dsonar.analysis.autodetection.disabled=true
