--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ packages = ['python_project_scripts']
 
 [dependency-groups]
 dev = [
+    "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
     "ruff>=0.14.5",
 ]
 
