--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Run linter
         run: |
           make lint
+      - name: Check Tests
+        run: |
+          make test
       - name: SonarQubeScan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
