--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -25,9 +25,10 @@ jobs:
       - name: Run linter
         run: |
           make lint
-      - name: Check Tests
+      - name: Check Tests and Coverage
         run: |
           make test
+          make test-coverage
       - name: SonarQubeScan
         uses: SonarSource/sonarqube-scan-action@v6
         env:
