--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -40,6 +40,19 @@ jobs:
           echo "=== Check if contains coverage data ==="
           grep -c "coverage" coverage.xml || echo "No coverage tag found"
           grep -c "class name" coverage.xml || echo "No class data found"
+      - name: Run tests with explicit coverage
+        run: |
+          uv run pytest \
+            --cov=python_project_scripts \
+            --cov-report=xml \
+            --cov-report=term-missing \
+            -v
+
+      - name: Generate detailed coverage report
+        run: |
+          uv run coverage html
+          echo "=== Coverage summary ==="
+          uv run coverage report
       - name: SonarQubeScan
         uses: SonarSource/sonarqube-scan-action@v6
         env:
