--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -41,7 +41,6 @@ jobs:
             -Dsonar.projectKey=cruelwxrld_python-project-50
             -Dsonar.organization=cruelwxrld
             -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.sources=.
+            -Dsonar.sources=python_project_scripts
             -Dsonar.tests=tests
             -Dsonar.python.version=3.12
-            -Dsonar.coverage.exclusions=tests/**,test_*
