--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ packages = ['python_project_scripts']
 dev = [
     "pytest>=9.0.1",
     "pytest-cov>=7.0.0",
+    "pyyaml>=6.0.3",
     "ruff>=0.14.5",
 ]
 
